Fix layering issue on swipe with z-index

--- a/src/components/clock/Card.scss
+++ b/src/components/clock/Card.scss
@@ -70,6 +70,7 @@
       margin-top: 5px;
       flex-direction: column;
       gap: 20px;
+      z-index: 1;
     }
 
     .Entry {
